# GodotWithBevyAndLuban

./: README.md
data/: gen.bat
data/Datas/: __enums__.xlsx
data/Datas/card/: #CardsInfo.xlsx
data/Tools/: build-luban.bat
data/Tools/Luban/Templates/rust-bin/: mod.sbn  toml.sbn
data/Tools/Luban/Templates/rust-json/: toml.sbn
godot/: bevy_app_singleton.tscn  export_presets.cfg  icon.svg.import  main.tscn  project.godot  rust.gdextension  rust.gdextension.uid  ui.tscn
godot/card/: card.tscn  card_background.tscn
godot/data/bytes/: card_tbcardsinfo.bytes  card_tbsiteitems.bytes  tbtranslate.bytes
godot/deck/: deck.tscn
rust/: Cargo.toml
rust/src/: card.rs  data.rs  deck.rs  editor.rs  lib.rs  translate.rs
rust/src/gd_bevy/: mod.rs
rust/src/standard/: card.rs  deck.rs  main.rs  mod.rs
